--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -1,1 +1,1 @@
-   |Нужно обработать случай когда отсутсвует резюме на страничке профиля, там сейчас None
+1.| ✔ |Нужно обработать случай когда отсутсвует резюме на страничке профиля, там сейчас None
