Fixed some issues

--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -1,6 +1,6 @@
 1.| ✔ |Нужно обработать случай когда отсутсвует резюме на страничке профиля, там сейчас None
 2.| ✔ |На странице поиска юзеров и быстрого поиска нужно чтобы название колонок было verbose_name, а не name
-3.|   |При наличии фото или резюме у юзера, когда заходишь в редактор, появляются label, которые не соответсвуют css шаблону, и выбиваюся из общего вида формы
+3.| ✔ |При наличии фото или резюме у юзера, когда заходишь в редактор, появляются label, которые не соответсвуют css шаблону, и выбиваюся из общего вида формы
 4.|   |Создать вьюшки для элементов меню about, links
 5.|   |На главной странице отсутсвует рамочка снизу
 6.| ✔ |У студентов сделать так, чтобы в колонке курса отображался его name а не id
