Register and Login update -Added 2 forms for login and register -Displaying login of user in right top corner -Menu buttons will show depending on logged user/anonymous

--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -1,7 +1,7 @@
 1.| ✔ |Нужно обработать случай когда отсутсвует резюме на страничке профиля, там сейчас None
 2.| ✔ |На странице поиска юзеров и быстрого поиска нужно чтобы название колонок было verbose_name, а не name
 3.| ✔ |При наличии фото или резюме у юзера, когда заходишь в редактор, появляются label, которые не соответсвуют css шаблону, и выбиваюся из общего вида формы
-4.|   |Создать вьюшки для элементов меню about, links
+4.| ✔ |Создать вьюшки для элементов меню about, links
 5.|   |На главной странице отсутсвует рамочка снизу
 6.| ✔ |У студентов сделать так, чтобы в колонке курса отображался его name а не id
 7.| ✔*|Настроить js на странице edit user, тк если мы хотим поменять position нашему юзеру, нужно отобразить соответсвующие поля для заполнения. (*Возможность менять position какому либо юзеру была убрана, т.к. для этого требуется пересоздание оного)
