Made first step for new registration system

--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -1,7 +1,18 @@
-1.| ✔ |Нужно обработать случай когда отсутсвует резюме на страничке профиля, там сейчас None
-2.| ✔ |На странице поиска юзеров и быстрого поиска нужно чтобы название колонок было verbose_name, а не name
-3.| ✔ |При наличии фото или резюме у юзера, когда заходишь в редактор, появляются label, которые не соответсвуют css шаблону, и выбиваюся из общего вида формы
-4.| ✔ |Создать вьюшки для элементов меню about, links
-5.| ✔ |На странице Links отсутсвует рамочка снизу
-6.| ✔ |У студентов сделать так, чтобы в колонке курса отображался его name а не id
-7.| ✔*|Настроить js на странице edit user, тк если мы хотим поменять position нашему юзеру, нужно отобразить соответсвующие поля для заполнения. (*Возможность менять position какому либо юзеру была убрана, т.к. для этого требуется пересоздание оного)
+1. | ✔ |Нужно обработать случай когда отсутсвует резюме на страничке профиля, там сейчас None
+2. | ✔ |На странице поиска юзеров и быстрого поиска нужно чтобы название колонок было verbose_name, а не name
+3. | ✔ |При наличии фото или резюме у юзера, когда заходишь в редактор, появляются label, которые не соответсвуют css шаблону, и выбиваюся из общего вида формы
+4. | ✔ |Создать вьюшки для элементов меню about, links
+5. | ✔ |На странице Links отсутсвует рамочка снизу
+6. | ✔ |У студентов сделать так, чтобы в колонке курса отображался его name а не id
+7. | ✔*|Настроить js на странице edit user, тк если мы хотим поменять position нашему юзеру, нужно отобразить соответсвующие поля для заполнения. (*Возможность менять position какому либо юзеру была убрана, т.к. для этого требуется пересоздание оного)
+
+!- Цель: Настроить регистрацию так, чтобы джанговский User, был соединен с моими студентами и учителями. Они должны видеть себя в общем списке, иметь возможность менять данные в своем профиле, искать других юзеров в поиске. Так же им нужно заблокировать ряд возможностей, по типу изменения других юзеров, и убрать доступ в всяким генераторам.
+
+8. |   |Нужно сделать так, чтобы при регистрации, клиента перекидывало на страницу, где нужно будет заполнить доп.контент для профиля. Надо добавить поле в модели по типу is_active, по дефолту оно будет false и как только информации будет достаточно, можно его переключить в true.
+9. |   |Придумать какого количества информации достаточно для того, чтобы профиль можно было считать активным, и как-то реализовать отслеживание.
+10.|   |Убрать из общего списка всех юзеров, которые is_active=false. Оставляем только тех, у кого true
+11.|   |Придумать какое-то особенное отображение для юзера в общем списке, чтобы он хорошо себя видел и быстро мог себя найти.
+12.|   |Убрать с сайта функционал, по типу генерации юзеров, для той группы, у которой нет на это прав. Оставить эти функции только для админ-профилей.
+13.|   |Попробовать как-то кастомизировать отображение пользователя в меню-баре в зависимости от его роли на сайте. По типу, у студов. будет желтый фон, у преподов-синий, у админов-красный
+14.|   |Тоже самое что и п.13 повторить на странице профиля. Тут же можно как-то разнообразить счетчик приглашенных юзеров, возможно какими то звездочками или т.п.
+15.|   |Убрать ненужные, повторяющиеся fields у моделей, по типу User.first_name и Student.first_name
