--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -6,13 +6,18 @@
 6. | ✔ |У студентов сделать так, чтобы в колонке курса отображался его name а не id
 7. | ✔*|Настроить js на странице edit user, тк если мы хотим поменять position нашему юзеру, нужно отобразить соответсвующие поля для заполнения. (*Возможность менять position какому либо юзеру была убрана, т.к. для этого требуется пересоздание оного)
 
-!- Цель: Настроить регистрацию так, чтобы джанговский User, был соединен с моими студентами и учителями. Они должны видеть себя в общем списке, иметь возможность менять данные в своем профиле, искать других юзеров в поиске. Так же им нужно заблокировать ряд возможностей, по типу изменения других юзеров, и убрать доступ в всяким генераторам.
+!- Цель: Настроить регистрацию так, чтобы джанговский User, был соединен с моими студентами и учителями. Они должны видеть себя в общем списке, иметь возможность менять данные в своем профиле, искать других юзеров в поиске. Так же им нужно заблокировать ряд возможностей, по типу изменения других юзеров, и убрать доступ ко всяким генераторам.
 
-8. |   |Нужно сделать так, чтобы при регистрации, клиента перекидывало на страницу, где нужно будет заполнить доп.контент для профиля. Надо добавить поле в модели по типу is_active, по дефолту оно будет false и как только информации будет достаточно, можно его переключить в true.
-9. |   |Придумать какого количества информации достаточно для того, чтобы профиль можно было считать активным, и как-то реализовать отслеживание.
-10.|   |Убрать из общего списка всех юзеров, которые is_active=false. Оставляем только тех, у кого true
-11.|   |Придумать какое-то особенное отображение для юзера в общем списке, чтобы он хорошо себя видел и быстро мог себя найти.
-12.|   |Убрать с сайта функционал, по типу генерации юзеров, для той группы, у которой нет на это прав. Оставить эти функции только для админ-профилей.
-13.|   |Попробовать как-то кастомизировать отображение пользователя в меню-баре в зависимости от его роли на сайте. По типу, у студов. будет желтый фон, у преподов-синий, у админов-красный
-14.|   |Тоже самое что и п.13 повторить на странице профиля. Тут же можно как-то разнообразить счетчик приглашенных юзеров, возможно какими то звездочками или т.п.
-15.|   |Убрать ненужные, повторяющиеся fields у моделей, по типу User.first_name и Student.first_name
+● | ✔ |Нужно сделать так, чтобы при регистрации, клиента перекидывало на страницу, где нужно будет заполнить доп.контент для профиля. Надо добавить поле в модели по типу is_active, по дефолту оно будет false и как только информации будет достаточно, можно его переключить в true.
+● | ✔ |Придумать какого количества информации достаточно для того, чтобы профиль можно было считать активным, и как-то реализовать отслеживание.
+● | ✔ |Убрать из общего списка всех юзеров, которые is_active=false. Оставляем только тех, у кого true
+● |   |Придумать какое-то особенное отображение для юзера в общем списке, чтобы он хорошо себя видел и быстро мог себя найти.
+● |   |Убрать с сайта функционал, по типу генерации юзеров, для той группы, у которой нет на это прав. Оставить эти функции только для админ-профилей.
+● |   |Попробовать как-то кастомизировать отображение пользователя в меню-баре в зависимости от его роли на сайте. По типу, у студов. будет желтый фон, у преподов-синий, у админов-красный
+● |   |Тоже самое что и п.13 повторить на странице профиля. Тут же можно как-то разнообразить счетчик приглашенных юзеров, возможно какими то звездочками или т.п.
+● | ✔ |Убрать ненужные, повторяющиеся fields у моделей, по типу User.first_name и Student.first_name
+● |   |Сделать рефакторинг ново-написанному коду. Вынести бизнес логику отдельно, валидации отдельно. Оптимизировать вьюшки, чтобы там ничего лишнего не было. По тому же принципу проверить модели/формы.
+
+!--------------------------------------------!
+
+8. |   |Подправить страничку профиля, потому что она выбивается из общей концепции стиля всего сайта (у неё нет рамки вокруг body)
