Reworked creating profile of user. Now it's creating via Django signal

--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -21,3 +21,4 @@
 !--------------------------------------------!
 
 8. |   |Подправить страничку профиля, потому что она выбивается из общей концепции стиля всего сайта (у неё нет рамки вокруг body)
+9. | ✔ |Сделать привязки юзера к его профилю через джанго сигнал
