--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -12,7 +12,7 @@
 ● | ✔ |Придумать какого количества информации достаточно для того, чтобы профиль можно было считать активным, и как-то реализовать отслеживание.
 ● | ✔ |Убрать из общего списка всех юзеров, которые is_active=false. Оставляем только тех, у кого true
 ● |   |Придумать какое-то особенное отображение для юзера в общем списке, чтобы он хорошо себя видел и быстро мог себя найти.
-● |   |Убрать с сайта функционал, по типу генерации юзеров, для той группы, у которой нет на это прав. Оставить эти функции только для админ-профилей.
+● | ✔ |Убрать с сайта функционал, по типу генерации юзеров, для той группы, у которой нет на это прав. Оставить эти функции только для админ-профилей.
 ● |   |Попробовать как-то кастомизировать отображение пользователя в меню-баре в зависимости от его роли на сайте. По типу, у студов. будет желтый фон, у преподов-синий, у админов-красный
 ● |   |Тоже самое что и п.13 повторить на странице профиля. Тут же можно как-то разнообразить счетчик приглашенных юзеров, возможно какими то звездочками или т.п.
 ● | ✔ |Убрать ненужные, повторяющиеся fields у моделей, по типу User.first_name и Student.first_name
@@ -22,3 +22,4 @@
 
 8. |   |Подправить страничку профиля, потому что она выбивается из общей концепции стиля всего сайта (у неё нет рамки вокруг body)
 9. | ✔ |Сделать привязки юзера к его профилю через джанго сигнал
+10.|   |Разобраться с отображением .pdg файлов в профиле, там что-то сломалось
