--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -22,4 +22,6 @@
 
 8. |   |Подправить страничку профиля, потому что она выбивается из общей концепции стиля всего сайта (у неё нет рамки вокруг body)
 9. | ✔ |Сделать привязки юзера к его профилю через джанго сигнал
-10.|   |Разобраться с отображением .pdg файлов в профиле, там что-то сломалось
+10.|   |Разобраться с отображением .pdf файлов в профиле, там что-то сломалось
+11.|   |Нужно вернуть генерацию юзеров для админов. Можно сперва создавать User с рандомными значениями и потом прикреплять к нему такой же профиль. Пароль можно сделать всем дефолтный, чтобы можно было зайти в этот аккаунт.
+12.|   |Переназвать модель User. Постоянная путаница с джанго юзером и моим. Можно например Person
