--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -25,3 +25,6 @@
 10.|   |Разобраться с отображением .pdf файлов в профиле, там что-то сломалось
 11.|   |Нужно вернуть генерацию юзеров для админов. Можно сперва создавать User с рандомными значениями и потом прикреплять к нему такой же профиль. Пароль можно сделать всем дефолтный, чтобы можно было зайти в этот аккаунт.
 12.|   |Переназвать модель User. Постоянная путаница с джанго юзером и моим. Можно например Person
+13.|   |Протестировать все функции на сыром проекте (без данных в БД). Обработать возможные ошибки, и выдать подсказки для пользователя
+14.|   |Сделать email уникальным
+15.|   |Обработать ошибку, когда юзер хочет активировать аккаунт одной и той же ссылкой 2 раза
