--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -16,15 +16,18 @@
 ● |   |Попробовать как-то кастомизировать отображение пользователя в меню-баре в зависимости от его роли на сайте. По типу, у студов. будет желтый фон, у преподов-синий, у админов-красный
 ● |   |Тоже самое что и п.13 повторить на странице профиля. Тут же можно как-то разнообразить счетчик приглашенных юзеров, возможно какими то звездочками или т.п.
 ● | ✔ |Убрать ненужные, повторяющиеся fields у моделей, по типу User.first_name и Student.first_name
-● |   |Сделать рефакторинг ново-написанному коду. Вынести бизнес логику отдельно, валидации отдельно. Оптимизировать вьюшки, чтобы там ничего лишнего не было. По тому же принципу проверить модели/формы.
+● | ✔ |Сделать рефакторинг ново-написанному коду. Вынести бизнес логику отдельно, валидации отдельно. Оптимизировать вьюшки, чтобы там ничего лишнего не было. По тому же принципу проверить модели/формы.
 
 !--------------------------------------------!
 
 8. |   |Подправить страничку профиля, потому что она выбивается из общей концепции стиля всего сайта (у неё нет рамки вокруг body)
 9. | ✔ |Сделать привязки юзера к его профилю через джанго сигнал
-10.|   |Разобраться с отображением .pdf файлов в профиле, там что-то сломалось
+10.| ✔ |Разобраться с отображением .pdf файлов в профиле, там что-то сломалось. (*Там был битый .pdf файл, по этому выдавало ошибку. Сделал обработку подобных случаев для всех расширений) 
 11.|   |Нужно вернуть генерацию юзеров для админов. Можно сперва создавать User с рандомными значениями и потом прикреплять к нему такой же профиль. Пароль можно сделать всем дефолтный, чтобы можно было зайти в этот аккаунт.
-12.|   |Переназвать модель User. Постоянная путаница с джанго юзером и моим. Можно например Person
-13.|   |Протестировать все функции на сыром проекте (без данных в БД). Обработать возможные ошибки, и выдать подсказки для пользователя
+12.| ✔ |Переназвать модель User. Постоянная путаница с джанго юзером и моим. Можно например Person
+13.| ✔ |Протестировать все функции на сыром проекте (без данных в БД). Обработать возможные ошибки, и выдать подсказки для пользователя
 14.|   |Сделать email уникальным
-15.|   |Обработать ошибку, когда юзер хочет активировать аккаунт одной и той же ссылкой 2 раза
+15.| ✔ |Обработать ошибку, когда юзер хочет активировать аккаунт одной и той же ссылкой 2 раза
+16.| ✔ |Поработать с поиском студентов. Там сейчас отображается слишком много информации о пользователях
+17.|   |Что-то сделать со списком юзеров в поиске. Значения таблицы почему то разъезжаются, когда в поиске остается мало юзеров.
+18.|   |Еще раз глянуть обработчик группы пользователя, чтобы он перекидывал на 403 страницу, а не на логин
