Fixed problems with Fast Search by course on Links page

--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -23,7 +23,7 @@
 8. |   |Подправить страничку профиля, потому что она выбивается из общей концепции стиля всего сайта (у неё нет рамки вокруг body)
 9. | ✔ |Сделать привязки юзера к его профилю через джанго сигнал
 10.| ✔ |Разобраться с отображением .pdf файлов в профиле, там что-то сломалось. (*Там был битый .pdf файл, по этому выдавало ошибку. Сделал обработку подобных случаев для всех расширений) 
-11.|   |Нужно вернуть генерацию юзеров для админов. Можно сперва создавать User с рандомными значениями и потом прикреплять к нему такой же профиль. Пароль можно сделать всем дефолтный, чтобы можно было зайти в этот аккаунт.
+11.| ✔ |Нужно вернуть генерацию юзеров для админов. Можно сперва создавать User с рандомными значениями и потом прикреплять к нему такой же профиль. Пароль можно сделать всем дефолтный, чтобы можно было зайти в этот аккаунт.
 12.| ✔ |Переназвать модель User. Постоянная путаница с джанго юзером и моим. Можно например Person
 13.| ✔ |Протестировать все функции на сыром проекте (без данных в БД). Обработать возможные ошибки, и выдать подсказки для пользователя
 14.|   |Сделать email уникальным
@@ -31,3 +31,4 @@
 16.| ✔ |Поработать с поиском студентов. Там сейчас отображается слишком много информации о пользователях
 17.|   |Что-то сделать со списком юзеров в поиске. Значения таблицы почему то разъезжаются, когда в поиске остается мало юзеров.
 18.|   |Еще раз глянуть обработчик группы пользователя, чтобы он перекидывал на 403 страницу, а не на логин
+19.|   |Доделать страничку создания юзера для админа
