Bugs Fixed -Overrided Django User model -Added custom permission controller -Added nickname for users -Reworked 403 error handler -Improved first-step processes with empty database

--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -26,9 +26,13 @@
 11.| ✔ |Нужно вернуть генерацию юзеров для админов. Можно сперва создавать User с рандомными значениями и потом прикреплять к нему такой же профиль. Пароль можно сделать всем дефолтный, чтобы можно было зайти в этот аккаунт.
 12.| ✔ |Переназвать модель User. Постоянная путаница с джанго юзером и моим. Можно например Person
 13.| ✔ |Протестировать все функции на сыром проекте (без данных в БД). Обработать возможные ошибки, и выдать подсказки для пользователя
-14.|   |Сделать email уникальным
+14.| ✔ |Сделать email уникальным
 15.| ✔ |Обработать ошибку, когда юзер хочет активировать аккаунт одной и той же ссылкой 2 раза
 16.| ✔ |Поработать с поиском студентов. Там сейчас отображается слишком много информации о пользователях
 17.|   |Что-то сделать со списком юзеров в поиске. Значения таблицы почему то разъезжаются, когда в поиске остается мало юзеров.
-18.|   |Еще раз глянуть обработчик группы пользователя, чтобы он перекидывал на 403 страницу, а не на логин
+18.| ✔ |Еще раз глянуть обработчик группы пользователя, чтобы он перекидывал на 403 страницу, а не на логин
 19.|   |Доделать страничку создания юзера для админа
+20.| ✔ |Сделать оверрайд для User, и настроить его под себя
+21.|   |При логировании попробовать соединить форму по email+nickname и дать возможность юзеру самостоятельно выбирать через что ему логироваться
+22.|   |Когда открыт профиль другого человека, пропадает ссылка по клику на свой никнейм, которая ведет на профиль юзера
+23.|   |Решить вопрос с авто-созданием обязательных объектов моделей Course и Groups. Возможно использование Groups больше вообще не понадобится, т.к. теперь все permissions проверяются по статусу is_staff
