--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -34,5 +34,5 @@
 19.|   |Доделать страничку создания юзера для админа
 20.| ✔ |Сделать оверрайд для User, и настроить его под себя
 21.|   |При логировании попробовать соединить форму по email+nickname и дать возможность юзеру самостоятельно выбирать через что ему логироваться
-22.|   |Когда открыт профиль другого человека, пропадает ссылка по клику на свой никнейм, которая ведет на профиль юзера
+22.| ✔ |Когда открыт профиль другого человека, пропадает ссылка по клику на свой никнейм, которая ведет на профиль юзера
 23.|   |Решить вопрос с авто-созданием обязательных объектов моделей Course и Groups. Возможно использование Groups больше вообще не понадобится, т.к. теперь все permissions проверяются по статусу is_staff
