Added unique color theme for every role on site (admin/teacher/student)

--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -11,9 +11,9 @@
 ● | ✔ |Нужно сделать так, чтобы при регистрации, клиента перекидывало на страницу, где нужно будет заполнить доп.контент для профиля. Надо добавить поле в модели по типу is_active, по дефолту оно будет false и как только информации будет достаточно, можно его переключить в true.
 ● | ✔ |Придумать какого количества информации достаточно для того, чтобы профиль можно было считать активным, и как-то реализовать отслеживание.
 ● | ✔ |Убрать из общего списка всех юзеров, которые is_active=false. Оставляем только тех, у кого true
-● |   |Придумать какое-то особенное отображение для юзера в общем списке, чтобы он хорошо себя видел и быстро мог себя найти.
+● | ✔ |Придумать какое-то особенное отображение для юзера в общем списке, чтобы он хорошо себя видел и быстро мог себя найти.
 ● | ✔ |Убрать с сайта функционал, по типу генерации юзеров, для той группы, у которой нет на это прав. Оставить эти функции только для админ-профилей.
-● |   |Попробовать как-то кастомизировать отображение пользователя в меню-баре в зависимости от его роли на сайте. По типу, у студов. будет желтый фон, у преподов-синий, у админов-красный
+● | ✔ |Попробовать как-то кастомизировать отображение пользователя в меню-баре в зависимости от его роли на сайте. По типу, у студов. будет желтый фон, у преподов-синий, у админов-красный
 ● |   |Тоже самое что и п.13 повторить на странице профиля. Тут же можно как-то разнообразить счетчик приглашенных юзеров, возможно какими то звездочками или т.п.
 ● | ✔ |Убрать ненужные, повторяющиеся fields у моделей, по типу User.first_name и Student.first_name
 ● | ✔ |Сделать рефакторинг ново-написанному коду. Вынести бизнес логику отдельно, валидации отдельно. Оптимизировать вьюшки, чтобы там ничего лишнего не было. По тому же принципу проверить модели/формы.
@@ -36,3 +36,4 @@
 21.|   |При логировании попробовать соединить форму по email+nickname и дать возможность юзеру самостоятельно выбирать через что ему логироваться
 22.| ✔ |Когда открыт профиль другого человека, пропадает ссылка по клику на свой никнейм, которая ведет на профиль юзера
 23.|   |Решить вопрос с авто-созданием обязательных объектов моделей Course и Groups. Возможно использование Groups больше вообще не понадобится, т.к. теперь все permissions проверяются по статусу is_staff
+24.|   |Переработать миксины для контекста, чтобы они все наследовались от главного контекстного миксина 
