--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -37,3 +37,5 @@
 22.| ✔ |Когда открыт профиль другого человека, пропадает ссылка по клику на свой никнейм, которая ведет на профиль юзера
 23.|   |Решить вопрос с авто-созданием обязательных объектов моделей Course и Groups. Возможно использование Groups больше вообще не понадобится, т.к. теперь все permissions проверяются по статусу is_staff
 24.|   |Переработать миксины для контекста, чтобы они все наследовались от главного контекстного миксина 
+25.|   |Сейчас по дефолту каждый юзер который зарегался через другие соц.сети становится студентом. Нужно добавить роль не определившегося юзера или добавить выбор статуса после успешной регистрации.
+26.|   |Более качественно обратотать случаи, когда мы не можем взять даннные с другой соц.сети по причине ограничения доступа со стороны пользователя (privacy settings)
