--- a/DJsite/TODO.txt
+++ b/DJsite/TODO.txt
@@ -39,3 +39,4 @@
 24.|   |Переработать миксины для контекста, чтобы они все наследовались от главного контекстного миксина 
 25.|   |Сейчас по дефолту каждый юзер который зарегался через другие соц.сети становится студентом. Нужно добавить роль не определившегося юзера или добавить выбор статуса после успешной регистрации.
 26.|   |Более качественно обратотать случаи, когда мы не можем взять даннные с другой соц.сети по причине ограничения доступа со стороны пользователя (privacy settings)
+27.|   |После успешной регистрации через соц.сеть нужно выводить в форму продолжения регистрации текущие данные. Особенно это касается first/last names
